<resources>
    <string name="app_name">FGC Companion</string>
    <!--Activity Names-->
    <string name="dashboard_activity_name">Dashboard</string>
    <string name="events_activity_name">FGC Events</string>
    <string name="config_activity_name">Configuration</string>
    <string name="browser_activity_name">Stream Browser</string>
    <string name="information_feeds_activity_name">Information</string>
    <string name="information_feeds_webview_activity_name">Browser</string>
    <string name="brackets_activity_name">Brackets</string>
    <string name="brackets_submission_activity_name">Bracket Search</string>
    <string name="participants_activity_name">Participants</string>
    <string name="preferences_activity_name">Preferences</string>

    <!--Intent Chooser Text-->
    <string name="intent_text_share_feed">Share Story With...</string>
    <string name="intent_text_open_stream">Open Stream With...</string>

    <string name="twitch_stream_image_description">Twitch Stream Image</string>
    <string name="twitch_loading_message_title">Please Wait</string>
    <string name="twitch_loading_message_subtitle">Loading Twitch Streams</string>

    <!--Headers-->
    <string name="dashboard_stories_header_name">Latest Stories</string>
    <string name="dashboard_header">Dashboard</string>
    <string name="bracket_verified_header">Verified Bracket</string>
    <string name="bracket_community_header">Community Suggested Bracket</string>
    <string name="bracket_user_header">My Custom Bracket</string>


    <!--Action Menu Options-->
    <string name="browser_action_refresh">Refresh</string>
    <string name="browser_action_filter">Filter</string>
    <string name="participants_action_delete">Delete</string>
    <string name="preferences_action_toggle_reorder">ReOrder</string>
    <string name="preferences_action_toggle_filter">Filter</string>

    <!--Menu Options -->
    <string name="information_menu_refresh_name">Refresh</string>
    <string name="information_menu_mark_as_read_name">Mark all as Read</string>
    <string name="information_menu_show_all_enable">Show All</string>
    <string name="information_menu_show_all_disable">Hide Read</string>
    <string name="menu_dashboard_name">Dashboard</string>
    <string name="menu_events_name">Events</string>
    <string name="menu_news_name">News</string>
    <string name="menu_stream_name">Streams</string>
    <string name="menu_preferences_name">Settings</string>

    <!--Button Names -->
    <string name="twitch_watch_button">Watch</string>
    <string name="twitch_Chat_button">Chat</string>
    <string name="dashboard_check_news_button_name">See Latest FGC News</string>
    <string name="dashboard_share_button_name">Share</string>
    <string name="dashboard_mark_as_read_button_name">Mark Read</string>
    <string name="dashboard_event_button_text">Browse Upcoming Events</string>
    <string name="dashboard_streams_button_text">Check Twitch Streams</string>
    <string name="read_more_button_name">Read More</string>
    <string name="events_brackets_button_name">Brackets</string>
    <string name="events_website_button_name">Website</string>
    <string name="bracket_view_open_button_name">View</string>
    <string name="bracket_plus_one_button_name">Approve</string>
    <string name="bracket_suggest_button_name">Suggest</string>
    <string name="bracket_search_add_button_name">Add</string>

    <!--Misc-->
    <string name="loading_message_subtitle">Loading Content</string>
    <string name="bracket_vs_text">VS</string>
    <string name="bracket_beat_text">BEAT</string>
    <string name="bracket_winner_formatted">Winner: %1$s</string>
    <string name="bracket_added_toast_message">Added Bracket: %1$s</string>
    <string name="dbinspector_app_name">FGC Comp. Debug DB</string>
    <string name="fgc_name">FGC</string>
    <string name="search_tournaments_default_status">Search for brackets</string>
    <string name="search_tournaments_checking_status">Search for brackets</string>
    <string name="no_new_stories_status">No New Stories Found</string>

    <!--Preferences labels-->
    <string name="dark_view_label">Enable Dark Viewing Mode</string>
    <string name="web_view_label">Use WebView with news items</string>

    <!--Error Text-->
    <string name="challonge_participants_loading_error">Error Loading Brackets</string>
    <string name="search_invalid_tournament_error">Invalid Tournament</string>
    <string name="search_valid_bracket_error">Valid Tournament</string>

    <!--Text for winner being unknown-->
    <string name="challonge_participants_winner_unknown">Not Determined</string>

    <!--Dialog Button Options-->
    <string name="base_dialog_ok">OK</string>
    <string name="base_dialog_cancel">CANCEL</string>

    <!--Dialog Text-->
    <string name="dialog_are_you_sure_header">Are you sure?</string>
    <string name="dialog_submit_suggestion_header">Submit Suggestion?</string>
    <string name="dialog_approve_suggestion_header">Approve Suggestion?</string>
    <string name="dialog_delete_bracket_content">Stop Following This Bracket?</string>
    <string name="dialog_suggest_custom_bracket_content">Suggest this bracket be added to this event?\n\n
    This will send a message to the FGC Companion Servers for review and verification.  \n It may appear in other
    users\' bracket list as \'Community Suggested\' in the interim.  \n\n Only send once,
        additional submissions will be ignored and blocked. Thanks</string>

    <string name="dialog_approve_community_bracket_content">Verify this bracket is legitimately part of this event?\n\n
    This will send a message to the FGC Companion Servers for review and verification.  \n\n Only send once,
        additional submissions will be ignored and blocked. Thanks</string>

    <string-array name="main_menu_options">
        <item>Dashboard</item>
        <item>Events</item>
        <item>News</item>
        <item>Streams</item>
        <item>Preferences</item>
    </string-array>
</resources>
