<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

      <item android:id="@+id/action_mark_all_as_read"
            android:title="@string/information_menu_mark_as_read_name"
            android:orderInCategory="80"
            android:icon="@drawable/ic_marked_as_read"
            app:showAsAction="always|withText"/>

      <item android:id="@+id/action_show_all"
            android:title="@string/information_menu_show_all_enable"
            android:orderInCategory="100"
            android:icon="@drawable/ic_view_all_on"
            app:showAsAction="always|withText"/>

      <item android:id="@+id/participants_action_refresh"
            android:title="@string/information_menu_refresh_name"
            android:orderInCategory="120"
            android:icon="@drawable/ic_menu_refresh"
            app:showAsAction="always"/>

</menu>